--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-moment": "^0.9.2",
+    "react-player": "^1.14.1",
     "react-scripts": "3.1.1"
   },
   "scripts": {
