--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react-dom": "^16.9.0",
     "react-moment": "^0.9.2",
     "react-player": "^1.14.1",
-    "react-scripts": "3.1.1"
+    "react-scripts": "3.1.1",
+    "react-webcam": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
