--- a/package.json
+++ b/package.json
@@ -4,10 +4,16 @@
   "private": true,
   "dependencies": {
     "@pusher/chatkit-client-react": "^0.1.2",
+    "@tensorflow-models/coco-ssd": "^2.0.0",
+    "@tensorflow/tfjs-converter": "^1.3.2",
+    "@tensorflow/tfjs-core": "^1.3.2",
+    "face-api.js": "^0.21.0",
     "moment": "^2.24.0",
+    "p5": "^0.10.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-moment": "^0.9.2",
+    "react-p5-wrapper": "^2.0.0",
     "react-player": "^1.14.1",
     "react-scripts": "3.1.1",
     "react-webcam": "^4.0.0"
